xee-xpath/tests/snapshots/xpath__cast_as_language.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'en' cast as xs:language\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    Language,
                    "en",
                ),
            ),
        ),
    },
)
