xee-xpath/tests/snapshots/xpath__cast_as_language_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'en us' cast as xs:language\")"
---
Err(
    FORG0001,
)
