xee-xpath/tests/snapshots/xpath__cast_as_name.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foobar' cast as xs:Name\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    Name,
                    "foobar",
                ),
            ),
        ),
    },
)
