xee-xpath/tests/snapshots/xpath__cast_as_name_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:Name\")"
---
Err(
    FORG0001,
)
