xee-xpath/tests/snapshots/xpath__cast_as_ncname_with_colon_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo:bar' cast as xs:NCName\")"
---
Err(
    FORG0001,
)
