xee-xpath/tests/snapshots/xpath__cast_as_nmtoken.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foobar' cast as xs:NMTOKEN\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    NMTOKEN,
                    "foobar",
                ),
            ),
        ),
    },
)
