xee-xpath/tests/snapshots/xpath__cast_as_nmtoken_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:NMTOKEN\")"
---
Err(
    FORG0001,
)
