xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_illegal_value.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'bar baz' cast as xs:QName\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: SourceSpan(
            0,
            26,
        ),
    },
)
