xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_multiple_prefixes.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'xs:bar:baz' cast as xs:QName\")"
---
Err(
    FORG0001,
)
