xee-xpath/tests/snapshots/xpath__cast_as_token.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'  foo\\n\\nbar ' cast as xs:token\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    Token,
                    "foo bar",
                ),
            ),
        ),
    },
)
